--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -1,14 +1,20 @@
 {
-
-  "skip":"تخطي",
-  "next":"التالي"
-, "our_app":"تطبيقنا",
-"on_1":"تطبيق شامل كل اللى انت محتاجه فى تطبيق واحد",
-"onn_2":"شاهد و أكسب!",
-"on_2":"مشاهدتك معنا تكسب معلومة جديدة ونقاطك تزيد تقدر تحولهاال نقود",
-"onn_3":"جديد أو مستعمل!",
-"on_3":"بيع واشترى منتجاتك جديدة أو مستعمل واكسب بسهولة مع أدباى","start_now":"ابدأ الآن",
-"choose_login":"يمكنك الان اختيار تسجيل الدخول !"
-
-
+  "skip": "تخطي",
+  "next": "التالي",
+  "our_app": "تطبيقنا",
+  "on_1": "تطبيق شامل كل اللى انت محتاجه فى تطبيق واحد",
+  "onn_2": "شاهد و أكسب!",
+  "on_2": "مشاهدتك معنا تكسب معلومة جديدة ونقاطك تزيد تقدر تحولهاال نقود",
+  "onn_3": "جديد أو مستعمل!",
+  "on_3": "بيع واشترى منتجاتك جديدة أو مستعمل واكسب بسهولة مع أدباى",
+  "start_now": "ابدأ الآن",
+  "choose_login": "يمكنك الان اختيار تسجيل الدخول !",
+  "login": "تسجيل الدخول",
+  "signup": "انشاء حساب",
+  "password": "كلمة المرور",
+  "enter_password": "ادخل كلمة المرور",
+  "phone": "رقم الجوال",
+  "enter_phone": "ادخل رقم الجوال",
+  "don't_have_an_account": "ليس لديك حساب معنا ؟",
+  "forget_password": "هل نسيت كلمة المرور ؟"
 }
