--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,12 +1,20 @@
 {
-
- "skip":"skip",
- "next":"next",
- "our_app":"our application",
- "on_1":"A comprehensive application with everything you need in one application",
- "onn_2":"Watch and win!",
- "on_2": "By watching us, you gain new information and your points increase, which you can convert into money.",
- "onn_3":"New or used!",
- "on_3":"Buy and sell your products, new or used, and earn easily with AdPay",
- "start_now":"Start now","choose_login":"You can now choose to log in!"
+     "skip": "skip",
+     "next": "next",
+     "our_app": "our application",
+     "on_1": "A comprehensive application with everything you need in one application",
+     "onn_2": "Watch and win!",
+     "on_2": "By watching us, you gain new information and your points increase, which you can convert into money.",
+     "onn_3": "New or used!",
+     "on_3": "Buy and sell your products, new or used, and earn easily with AdPay",
+     "start_now": "Start now",
+     "choose_login": "You can now choose to log in!",
+     "login": "login",
+     "signup": "signup",
+     "password": "password",
+     "phone": "phone",
+     "enter_password": "enter password",
+     "enter_phone": "enter phone number",
+     "don't_have_an_account": "don't have an account?",
+     "forget_password": "forget password ?"
 }
