--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -11,12 +11,33 @@
   "choose_login": "يمكنك الان اختيار تسجيل الدخول !",
   "login": "تسجيل الدخول",
   "signup": "انشاء حساب",
-  "password": "كلمة المرور",
+  "password": "كلمة المرور", 
+  "confirm_password": "تأكيد كلمة المرور", 
   "enter_password": "ادخل كلمة المرور",
   "phone": "رقم الجوال",
   "enter_phone": "ادخل رقم الجوال",
   "don't_have_an_account": "ليس لديك حساب معنا ؟",
   "forget_password": "هل نسيت كلمة المرور ؟",
   "personal_info":"البيانات الشخصية",
-  "market_info":"بيانات المتجر"
+  "market_info":"بيانات المتجر",
+
+  "name":"الاسم",
+  "enter_name":"ادخل الأسم",
+  "store_ads":"متجر  & معلن",
+  "ads":" معلن",
+
+  "store_name":"اسم المتجر",
+  "enter_store_name":"ادخل اسم المتجر",
+  "store_adress":"عنوان المتجر",
+  "enter_store_adress":"ادخل عنوان المتجر",
+  "store_category":"تصنيف المتجر",
+  "choose_category":"اختر التصنيف " ,
+  "sub_categoty":"التصنيفات الفرعيه",
+
+  "add_sub_categoty":"اضف تصنيف",
+
+  "store_logo":"لوجو المتجر",
+  "banner_logo":"لوجو البانر"
+
+
 }
