--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -17,7 +17,25 @@
      "enter_phone": "enter phone number",
      "don't_have_an_account": "don't have an account?",
      "forget_password": "forget password ?",
+     "confirm_password": "confirm password",
 
      "personal_info":"personal info",
-     "market_info":"market info"
+     "market_info":"market info",
+     "name":"name",
+     "enter_name":"enter name",
+     "store_ads":"store & advertiser",
+     "ads":"advertised",
+     "store_name":"store name",
+     "enter_store_name":"enter store name",
+     "store_adress":"store adress",
+     "enter_store_adress":"enter store adress",
+     "store_category":   "store category",
+     "choose_category":   "choose category",
+     "sub_categoty":     "sub category",
+   
+     "add_sub_categoty": "add category",
+     "store_logo": "store logo",
+     "banner_logo":"banner logo"
+
+   
 }
