--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -51,5 +51,6 @@
   "products": "المنتجات",
   "birthday": "عيدك عندنا",
   "Discounts": "تخفيضات علي كل ملابس الاطفال",
-  "AdvertisementStore": "اعلان.متجر الاصيل"
+  "AdvertisementStore": "اعلان.متجر الاصيل",
+  "home": "الرئيسية"
 }
