--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -48,6 +48,7 @@
      "birthday": "Your birthday is with us",
      "Discounts": "Discounts on all children's clothing",
      "AdvertisementStore": "Advertisement. Al-Aseel Store",
-     "advertisement": "advertisement"
+     "advertisement": "advertisement",
+     "home":"Home"
    
 }
