--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -62,5 +62,9 @@
 "AllComments": "كل التعليقات",
   "SendMessage":"ارسال رساله",
   "reply": "اكتب ردك",
-  "SendReply": "ارسل رسالتك"
+  "SendReply": "ارسل رسالتك",
+  "basket": "السلة",
+  "mainpage": "العودة للرئيسية",
+  "completedsuccessfully": "تم اكمال طلبك بنجاح",
+  "happytodeal": "مرحبا بك نحن سعداء بالتعامل معك في تطبيق ادباي ويمكنك استخدام تطبيقنا في اي وقت"
 }
