--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -59,6 +59,10 @@
      "AllComments": "AllComments",
      "SendMessage": "Send Message",
      "reply": "your reply",
-     "SendReply": "Send Reply"
+     "SendReply": "Send Reply",
+     "basket": "The basket",
+     "mainpage": "Back to main page",
+     "completedsuccessfully": "Your request has been completed successfully",
+        "happytodeal": "Welcome, we are happy to deal with you on the AdPay application and you can use our application at any time"
 
 }
