--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -66,5 +66,6 @@
   "basket": "السلة",
   "mainpage": "العودة للرئيسية",
   "completedsuccessfully": "تم اكمال طلبك بنجاح",
-  "happytodeal": "مرحبا بك نحن سعداء بالتعامل معك في تطبيق ادباي ويمكنك استخدام تطبيقنا في اي وقت"
+  "happytodeal": "مرحبا بك نحن سعداء بالتعامل معك في تطبيق ادباي ويمكنك استخدام تطبيقنا في اي وقت",
+  "orders": "الطلبات"
 }
