--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -64,6 +64,34 @@
      "mainpage": "Back to main page",
      "completedsuccessfully": "Your request has been completed successfully",
         "happytodeal": "Welcome, we are happy to deal with you on the AdPay application and you can use our application at any time",
-     "orders": "the orders"
+     "orders": "the orders",
+     "details": "the details",
+     "ordernum": "The order number",
+     "Merchantaccount": "Merchant account",
+     "MerchantRating": "Merchant Rating",
+     "confirm": "confirm",
+"writecomment": "writecomment",
+     "menue": "menue",
+     "Mydata": "My data",
+     "Profilepersonly": "Profile personly",
+     "Mymessages": "My messages",
+     "AddHaraj": "Add Haraj",
+     "Favorite": "Favorite",
+     "Settings": "Settings",
+     "contactus": "Contact us",
+     "aboutapp": "about the app",
+     "Terms": "Terms and Conditions",
+     "Shareapp": "Share the app",
+     "evaluation": "App evaluation",
+     "Logout": "Log out",
+     "notifications": "Notifications",
+     "writecomment": "write your comment",
+     "messages": "th Messages" ,
+     "addharag": "Add Haraj",
+     "Productimage": "Product image",
+     "productname": "Product Name" ,
+     "price": "the price",
+     "Category": "Category",
+     "Selectcategory": "Select category"
 
 }
