--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -95,7 +95,21 @@
   "productname": "اسم المنتج",
   "price": "السعر",
   "Category": "الفئة",
-  "Selectcategory": "اختر الفئة"
+  "Selectcategory": "اختر الفئة",
+  "Subcategory": "الفئة الفرعيه",
+  "Productdetails": "تفاصيل المنتج",
+"add": "أضافه",
+  "name": "الاسم",
+  "phone": "رقم الجوال",
+  "topic": "الموضوع",
+  "send": "ارسال",
+  "profile": "حسابي",
+  "points": "نقاطي",
+  "Forester": "حراجي",
+  "places": "الاماكن",
+  "edit": "تعديل الحساب",
+  "delete": "حذف الحساب",
+  "pocket": "محفظتي"
 
 
 
