--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -116,8 +116,8 @@
   "update": "تحديث",
   "Detailedaddress": "العنوان بالتفصيل",
   "Sold": "تم البيع",
-  "editproduct": "تعديل المنتج"
-
+  "editproduct": "تعديل المنتج",
+"Createaccount": "انشاء حساب"
 
 
 }
