--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -113,6 +113,7 @@
      "update": "update",
      "Detailedaddress": "Detailed address",
      "Sold": "Sold",
-     "editproduct": "editproduct"
+     "editproduct": "editproduct",
+     "Createaccount": "Create an account"
 
 }
