--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,5 +1,4 @@
 {
-
      "skip": "skip",
      "next": "next",
      "our_app": "our application",
@@ -10,7 +9,8 @@
      "on_3": "Buy and sell your products, new or used, and earn easily with AdPay",
      "start_now": "Start now",
      "choose_login": "You can now choose to log in!",
-     "login": "login",  "no_data": "there are no products",
+     "login": "login",
+     "no_data": "there are no products",
 
      "signup": "signup",
      "password": "password",
@@ -20,24 +20,22 @@
      "don't_have_an_account": "don't have an account?",
      "forget_password": "forget password ?",
      "confirm_password": "confirm password",
-
-     "personal_info":"personal info",
-     "market_info":"market info",
-     "name":"name",
-     "enter_name":"enter name",
-     "store_ads":"store & advertiser",
-     "ads":"advertised",
-     "store_name":"store name",
-     "enter_store_name":"enter store name",
-     "store_adress":"store adress",
-     "enter_store_adress":"enter store adress",
-     "store_category":   "store category",
-     "choose_category":   "choose category",
-     "sub_categoty":     "sub category",
-   
+     "personal_info": "personal info",
+     "market_info": "market info",
+     "name": "name",
+     "enter_name": "enter name",
+     "store_ads": "store & advertiser",
+     "ads": "advertised",
+     "store_name": "store name",
+     "enter_store_name": "enter store name",
+     "store_adress": "store adress",
+     "enter_store_adress": "enter store adress",
+     "store_category": "store category",
+     "choose_category": "choose category",
+     "sub_categoty": "sub category",
      "add_sub_categoty": "add category",
      "store_logo": "store logo",
-     "banner_logo":"banner logo",
+     "banner_logo": "banner logo",
      "advertisements": "advertisements",
      "Categories": "Categories",
      "all": "all",
@@ -51,12 +49,12 @@
      "Discounts": "Discounts on all children's clothing",
      "AdvertisementStore": "Advertisement. Al-Aseel Store",
      "advertisement": "advertisement",
-     "home":"Home",
+     "home": "Home",
      "Addtocart": "Add to cart",
      "Productdetails": "Product Details",
-        "colors": "Available colors",
+     "colors": "Available colors",
      "Availablesizes": "Available sizes",
-"comments": "comments",
+     "comments": "comments",
      "AllComments": "AllComments",
      "SendMessage": "Send Message",
      "reply": "your reply",
@@ -64,14 +62,14 @@
      "basket": "The basket",
      "mainpage": "Back to main page",
      "completedsuccessfully": "Your request has been completed successfully",
-        "happytodeal": "Welcome, we are happy to deal with you on the AdPay application and you can use our application at any time",
+     "happytodeal": "Welcome, we are happy to deal with you on the AdPay application and you can use our application at any time",
      "orders": "the orders",
      "details": "the details",
      "ordernum": "The order number",
      "Merchantaccount": "Merchant account",
      "MerchantRating": "Merchant Rating",
      "confirm": "confirm",
-"writecomment": "writecomment",
+     "writecomment": "writecomment",
      "menue": "menue",
      "Mydata": "My data",
      "Profilepersonly": "Profile personly",
@@ -87,10 +85,10 @@
      "Logout": "Log out",
      "notifications": "Notifications",
      "writecomment": "write your comment",
-     "messages": "th Messages" ,
+     "messages": "th Messages",
      "addharag": "Add Haraj",
      "Productimage": "Product image",
-     "productname": "Product Name" ,
+     "productname": "Product Name",
      "price": "the price",
      "Category": "Category",
      "Selectcategory": "Select category",
@@ -115,6 +113,28 @@
      "Detailedaddress": "Detailed address",
      "Sold": "Sold",
      "editproduct": "editproduct",
-     "Createaccount": "Create an account"
+     "Createaccount": "Create an account",
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+     "goal_statistics":"Goal statistics",     "wallet": "Wallet",
+     "total_count": "Total Orders",
+     "total_products": "Total Products",
+     "total_ads": "Total Ads",  "have_goals":"You don't have any stats.",
+     "complete_orders":  "Completed Orders",
+     "inComplete_orders":  "New Orders",
+     "complete_ads":"Completed Ads",  "incomplete_ads":"New Ads"
+
 
 }
