--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -139,7 +139,8 @@
   "complete_ads":"الاعلانات المكتملة",
   "incomplete_ads":"الاعلانات الجديدة","no_notifications":"ليس لديك اي اشعارات"
 ,"refused_order":"الطلبات الموقوفة",
-"order_details":"تفاصيل الطلب"
+"order_details":"تفاصيل الطلب",
+"count":"عدد"
 
 
 
