--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -112,36 +112,24 @@
   "Detailedaddress": "العنوان بالتفصيل",
   "Sold": "تم البيع",
   "editproduct": "تعديل المنتج",
-"Createaccount": "انشاء حساب",
+  "Createaccount": "انشاء حساب",
   "send": "ارسال",
   "Createaccount": "انشاء حساب",
-
-
-
-
-
-
-
-
-
-
-
-
   "wallet": "المحفظة",
   "total_count": "اجمالى الطلبات",
   "total_products": "اجمالى المنتجات",
-  "total":"الاجمالي",
+  "total": "الاجمالي",
   "total_ads": "اجمالى الاعلانات",
-  "goal_statistics":"احصائيات الأهداف",
-  "have_goals":"ليس لديك اي احصائيات",
-  "complete_orders":  "الطلبات المكتملة",
-  "incomplete_orders":  "الطلبات الجديدة",
-  "complete_ads":"الاعلانات المكتملة",
-  "incomplete_ads":"الاعلانات الجديدة","no_notifications":"ليس لديك اي اشعارات"
-,"refused_order":"الطلبات الموقوفة",
-"order_details":"تفاصيل الطلب",
-"count":"عدد"
-
-
-
+  "goal_statistics": "احصائيات الأهداف",
+  "have_goals": "ليس لديك اي احصائيات",
+  "complete_orders": "الطلبات المكتملة",
+  "incomplete_orders": "الطلبات الجديدة",
+  "complete_ads": "الاعلانات المكتملة",
+  "incomplete_ads": "الاعلانات الجديدة",
+  "no_notifications": "ليس لديك اي اشعارات",
+  "refused_order": "الطلبات الموقوفة",
+  "order_details": "تفاصيل الطلب",
+  "count": "عدد",
+  "current":"ريال",
+  "send_order":"ارسال الطلب"
 }
