--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -11,7 +11,6 @@
      "choose_login": "You can now choose to log in!",
      "login": "login",
      "no_data": "there are no products",
-
      "signup": "signup",
      "password": "password",
      "phone": "phone",
@@ -115,32 +114,22 @@
      "editproduct": "editproduct",
      "Createaccount": "Create an account",
      "send": "send",
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-     "goal_statistics":"Goal statistics",     "wallet": "Wallet",
+     "goal_statistics": "Goal statistics",
+     "wallet": "Wallet",
      "total_count": "Total Orders",
      "total_products": "Total Products",
-     "total_ads": "Total Ads",  "have_goals":"You don't have any stats.",
-     "complete_orders":  "Completed Orders",
-     "incomplete_orders":  "New Orders",  "total":"Total",
-
-     "complete_ads":"Completed Ads",  "incomplete_ads":"New Ads"
-,"no_notifications": "You don't have any notifications",
-"refused_order":"Refused Orders","order_details":"Order Details",
-"count":"quantity"
-
+     "total_ads": "Total Ads",
+     "have_goals": "You don't have any stats.",
+     "complete_orders": "Completed Orders",
+     "incomplete_orders": "New Orders",
+     "total": "Total",
+     "complete_ads": "Completed Ads",
+     "incomplete_ads": "New Ads",
+     "no_notifications": "You don't have any notifications",
+     "refused_order": "Refused Orders",
+     "order_details": "Order Details",
+     "count": "quantity",
+     "current":"SAR",  "send_order":"Send Order"
 
 
 }
