--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -115,6 +115,7 @@
 "Createaccount": "انشاء حساب",
   "send": "ارسال",
   "Createaccount": "انشاء حساب",
+  "confirm": "التأكيد",
 
 
 
@@ -140,8 +141,9 @@
   "incomplete_ads":"الاعلانات الجديدة","no_notifications":"ليس لديك اي اشعارات"
 ,"refused_order":"الطلبات الموقوفة",
 "order_details":"تفاصيل الطلب",
-"count":"عدد"
-
+"count":"عدد",
+"forgetpass": "نسيت كلمة المرور",
+  "newpass": "كلمة المرور الجديدة "
 
 
 }
