--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,169 +1,157 @@
 {
-     "skip": "skip",
-     "next": "next",
-     "our_app": "our application",
-     "on_1": "A comprehensive application with everything you need in one application",
-     "onn_2": "Watch and win!",
-     "on_2": "By watching us, you gain new information and your points increase, which you can convert into money.",
-     "onn_3": "New or used!",
-     "on_3": "Buy and sell your products, new or used, and earn easily with AdPay",
-     "start_now": "Start now",
-     "choose_login": "You can now choose to log in!",
-     "login": "login",
-     "no_data": "there are no products",
-     "signup": "signup",
-     "password": "password",
-     "phone": "phone",
-     "enter_password": "enter password",
-     "enter_phone": "enter phone number",
-     "don't_have_an_account": "don't have an account?",
-     "forget_password": "forget password ?",
-     "confirm_password": "confirm password",
-     "personal_info": "personal info",
-     "market_info": "market info",
-     "name": "name",
-     "enter_name": "enter name",
-     "store_ads": "store & advertiser",
-     "ads": "advertised",
-     "store_name": "store name",
-     "enter_store_name": "enter store name",
-     "store_adress": "store adress",
-     "enter_store_adress": "enter store adress",
-     "store_category": "store category",
-     "choose_category": "choose category",
-     "sub_categoty": "sub category",
-     "add_sub_categoty": "add category",
-     "store_logo": "store logo",
-     "banner_logo": "banner logo",
-     "advertisements": "advertisements",
-     "Categories": "Categories",
-     "all": "all",
-     "hello": "hello",
-     "search": "search for products",
-     "BsetSeller": "BsetSeller",
-     "theShop": "The shop",
-     "garage": "The garage",
-     "products": "Products",
-     "birthday": "Your birthday is with us",
-     "Discounts": "Discounts on all children's clothing",
-     "AdvertisementStore": "Advertisement. Al-Aseel Store",
-     "advertisement": "advertisement",
-     "home": "Home",
-     "Addtocart": "Add to cart",
-     "Productdetails": "Product Details",
-     "colors": "Available colors",
-     "Availablesizes": "Available sizes",
-     "comments": "comments",
-     "AllComments": "AllComments",
-     "SendMessage": "Send Message",
-     "reply": "your reply",
-     "SendReply": "Send Reply",
-     "basket": "The basket",
-     "mainpage": "Back to main page",
-     "completedsuccessfully": "Your request has been completed successfully",
-     "happytodeal": "Welcome, we are happy to deal with you on the AdPay application and you can use our application at any time",
-     "orders": "the orders",
-     "details": "the details",
-     "ordernum": "The order number",
-     "Merchantaccount": "Merchant account",
-     "MerchantRating": "Merchant Rating",
-     "confirm": "confirm",
-     "writecomment": "writecomment",
-     "menue": "menue",
-     "Mydata": "My data",
-     "Profilepersonly": "Profile personly",
-     "Mymessages": "My messages",
-     "AddHaraj": "Add Haraj",
-     "Favorite": "Favorite",
-     "Settings": "Settings",
-     "contactus": "Contact us",
-     "aboutapp": "about the app",
-     "Terms": "Terms and Conditions",
-     "Shareapp": "Share the app",
-     "evaluation": "App evaluation",
-     "Logout": "Log out",
-     "notifications": "Notifications",
-     "writecomment": "write your comment",
-     "messages": "th Messages",
-     "addharag": "Add Haraj",
-     "Productimage": "Product image",
-     "productname": "Product Name",
-     "price": "the price",
-     "Category": "Category",
-     "Selectcategory": "Select category",
-     "Subcategory": "Subcategory",
-     "Productdetails": "Product details",
-     "add": "add",
-     "name": "The name",
-     "phone": "your phone",
-     "topic": "the topic",
-     "send": "the send",
-     "profile": "my profile",
-     "points": "my points",
-     "Forester": "Forester",
-     "places": "the places",
-     "edit": "Edit Profile",
-     "delete": "delete profile",
-     "pocket": "pocket",
-     "editprofile": "editprofile",
-     "NewPassword": "New Password",
-     "ConfirmPass": "Confirm Password",
-     "update": "update",
-     "Detailedaddress": "Detailed address",
-     "Sold": "Sold",
-     "editproduct": "editproduct",
-     "Createaccount": "Create an account",
-     "send": "send",
-<<<<<<< HEAD
-     "goal_statistics":"Goal statistics",
-=======
-     "goal_statistics": "Goal statistics",
->>>>>>> 29e78e53e6b6c98572747bdb11cef4571c126f54
-     "wallet": "Wallet",
-     "total_count": "Total Orders",
-     "total_products": "Total Products",
-     "total_ads": "Total Ads",
-     "have_goals": "You don't have any stats.",
-     "complete_orders": "Completed Orders",
-     "incomplete_orders": "New Orders",
-     "total": "Total",
-     "complete_ads": "Completed Ads",
-     "incomplete_ads": "New Ads",
-     "no_notifications": "You don't have any notifications",
-     "refused_order": "Refused Orders",
-     "order_details": "Order Details",
-     "count": "quantity",
-     "current": "SAR",
-     "send_order": "Send Order",
-     "resend_order": "Resend order",
-     "complete_order": "Order completed",
-     "reset_ordre": "Reset order",
-     "wallety": "my wallet",
-     "myCredit": "My Credit",
-     "last_transfer": "Last transfers",  "used_products":"Used products", 
-      "new_products":"New Products",
-
-<<<<<<< HEAD
-     "complete_ads":"Completed Ads",  "incomplete_ads":"New Ads"
-,"no_notifications": "You don't have any notifications",
-"refused_order":"Refused Orders","order_details":"Order Details",
-"count":"quantity",
-     "forgetpass": "ForgetPassword",
-     "newpass": "New Password",
-=======
-
->>>>>>> 29e78e53e6b6c98572747bdb11cef4571c126f54
-
-"confirm": "confirm"
-
-
-
-
-      "new":"new",
-      "pending":"pending",
-      "complete":"complete",
-      "choose_type":"Choose Type",
-      "no_ads":"No Ads"
-
-
+      "skip": "skip",
+      "next": "next",
+      "our_app": "our application",
+      "on_1": "A comprehensive application with everything you need in one application",
+      "onn_2": "Watch and win!",
+      "on_2": "By watching us, you gain new information and your points increase, which you can convert into money.",
+      "onn_3": "New or used!",
+      "on_3": "Buy and sell your products, new or used, and earn easily with AdPay",
+      "start_now": "Start now",
+      "choose_login": "You can now choose to log in!",
+      "login": "login",
+      "no_data": "there are no products",
+      "signup": "signup",
+      "password": "password",
+      "phone": "phone",
+      "enter_password": "enter password",
+      "enter_phone": "enter phone number",
+      "don't_have_an_account": "don't have an account?",
+      "forget_password": "forget password ?",
+      "confirm_password": "confirm password",
+      "personal_info": "personal info",
+      "market_info": "market info",
+      "name": "name",
+      "enter_name": "enter name",
+      "store_ads": "store & advertiser",
+      "ads": "advertised",
+      "store_name": "store name",
+      "enter_store_name": "enter store name",
+      "store_adress": "store adress",
+      "enter_store_adress": "enter store adress",
+      "store_category": "store category",
+      "choose_category": "choose category",
+      "sub_categoty": "sub category",
+      "add_sub_categoty": "add category",
+      "store_logo": "store logo",
+      "banner_logo": "banner logo",
+      "advertisements": "advertisements",
+      "Categories": "Categories",
+      "all": "all",
+      "hello": "hello",
+      "search": "search for products",
+      "BsetSeller": "BsetSeller",
+      "theShop": "The shop",
+      "garage": "The garage",
+      "products": "Products",
+      "birthday": "Your birthday is with us",
+      "Discounts": "Discounts on all children's clothing",
+      "AdvertisementStore": "Advertisement. Al-Aseel Store",
+      "advertisement": "advertisement",
+      "home": "Home",
+      "Addtocart": "Add to cart",
+      "Productdetails": "Product Details",
+      "colors": "Available colors",
+      "Availablesizes": "Available sizes",
+      "comments": "comments",
+      "AllComments": "AllComments",
+      "SendMessage": "Send Message",
+      "reply": "your reply",
+      "SendReply": "Send Reply",
+      "basket": "The basket",
+      "mainpage": "Back to main page",
+      "completedsuccessfully": "Your request has been completed successfully",
+      "happytodeal": "Welcome, we are happy to deal with you on the AdPay application and you can use our application at any time",
+      "orders": "the orders",
+      "details": "the details",
+      "ordernum": "The order number",
+      "Merchantaccount": "Merchant account",
+      "MerchantRating": "Merchant Rating",
+      "confirm": "confirm",
+      "writecomment": "writecomment",
+      "menue": "menue",
+      "Mydata": "My data",
+      "Profilepersonly": "Profile personly",
+      "Mymessages": "My messages",
+      "AddHaraj": "Add Haraj",
+      "Favorite": "Favorite",
+      "Settings": "Settings",
+      "contactus": "Contact us",
+      "aboutapp": "about the app",
+      "Terms": "Terms and Conditions",
+      "Shareapp": "Share the app",
+      "evaluation": "App evaluation",
+      "Logout": "Log out",
+      "notifications": "Notifications",
+      "writecomment": "write your comment",
+      "messages": "th Messages",
+      "addharag": "Add Haraj",
+      "Productimage": "Product image",
+      "productname": "Product Name",
+      "price": "the price",
+      "Category": "Category",
+      "Selectcategory": "Select category",
+      "Subcategory": "Subcategory",
+      "Productdetails": "Product details",
+      "add": "add",
+      "name": "The name",
+      "phone": "your phone",
+      "topic": "the topic",
+      "send": "the send",
+      "profile": "my profile",
+      "points": "my points",
+      "Forester": "Forester",
+      "places": "the places",
+      "edit": "Edit Profile",
+      "delete": "delete profile",
+      "pocket": "pocket",
+      "editprofile": "editprofile",
+      "NewPassword": "New Password",
+      "ConfirmPass": "Confirm Password",
+      "update": "update",
+      "Detailedaddress": "Detailed address",
+      "Sold": "Sold",
+      "editproduct": "editproduct",
+      "Createaccount": "Create an account",
+      "send": "send",
+      "goal_statistics": "Goal statistics",
+      "goal_statistics": "Goal statistics",
+      "wallet": "Wallet",
+      "total_count": "Total Orders",
+      "total_products": "Total Products",
+      "total_ads": "Total Ads",
+      "have_goals": "You don't have any stats.",
+      "complete_orders": "Completed Orders",
+      "incomplete_orders": "New Orders",
+      "total": "Total",
+      "complete_ads": "Completed Ads",
+      "incomplete_ads": "New Ads",
+      "no_notifications": "You don't have any notifications",
+      "refused_order": "Refused Orders",
+      "order_details": "Order Details",
+      "count": "quantity",
+      "current": "SAR",
+      "send_order": "Send Order",
+      "resend_order": "Resend order",
+      "complete_order": "Order completed",
+      "reset_ordre": "Reset order",
+      "wallety": "my wallet",
+      "myCredit": "My Credit",
+      "last_transfer": "Last transfers",
+      "used_products": "Used products",
+      "new_products": "New Products",
+      "complete_ads": "Completed Ads",
+      "incomplete_ads": "New Ads",
+      "no_notifications": "You don't have any notifications",
+      "refused_order": "Refused Orders",
+      "order_details": "Order Details",
+      "count": "quantity",
+      "forgetpass": "ForgetPassword",
+      "newpass": "New Password",
+      "confirm": "confirm",
+      "new": "new",
+      "pending": "pending",
+      "complete": "complete",
+      "choose_type": "Choose Type",
+      "no_ads": "No Ads"
 }
