--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -157,5 +157,7 @@
   "pending": "ف الانتظار",
   "complete": "مكتملة",
   "choose_type": "اختر النوع",
-  "no_ads": "لا يوجد إعلانات"
+  "no_ads": "لا يوجد إعلانات",
+  "region": "المنطقة",
+  "city": "المدينة"
 }
