--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -83,7 +83,6 @@
   "evaluation": "تقييم التطبيق",
   "Logout": "تسجيل الخروج",
   "notifications": "الاشعارات",
-  "writecomment": "اكتب تعليقك",
   "messages": "الرسائل",
   "addharag": "اضافة حراج",
   "Productimage": "صورة المنتج",
@@ -92,10 +91,7 @@
   "Category": "الفئة",
   "Selectcategory": "اختر الفئة",
   "Subcategory": "الفئة الفرعيه",
-  "Productdetails": "تفاصيل المنتج",
   "add": "أضافه",
-  "name": "الاسم",
-  "phone": "رقم الجوال",
   "topic": "الموضوع",
   "send": "ارسال",
   "profile": "حسابي",
@@ -112,26 +108,12 @@
   "Detailedaddress": "العنوان بالتفصيل",
   "Sold": "تم البيع",
   "editproduct": "تعديل المنتج",
-  "Createaccount": "انشاء حساب",
-  "send": "ارسال",
-  "Createaccount": "انشاء حساب",
-  "confirm": "التأكيد",
   "wallet": "المحفظة",
   "wallety": "محفظتى",
   "total_count": "اجمالى الطلبات",
   "total_products": "اجمالى المنتجات",
   "total": "الاجمالي",
   "total_ads": "اجمالى الاعلانات",
-  "goal_statistics": "احصائيات الأهداف",
-  "have_goals": "ليس لديك اي احصائيات",
-  "complete_orders": "الطلبات المكتملة",
-  "incomplete_orders": "الطلبات الجديدة",
-  "complete_ads": "الاعلانات المكتملة",
-  "incomplete_ads": "الاعلانات الجديدة",
-  "no_notifications": "ليس لديك اي اشعارات",
-  "refused_order": "الطلبات الموقوفة",
-  "order_details": "تفاصيل الطلب",
-  "count": "عدد",
   "forgetpass": "نسيت كلمة المرور",
   "newpass": "كلمة المرور الجديدة ",
   "goal_statistics": "احصائيات الأهداف",
@@ -159,9 +141,11 @@
   "choose_type": "اختر النوع",
   "no_ads": "لا يوجد إعلانات",
   "region": "المنطقة",
-  "city": "المدينة"
-,  "add_new_sub": "اضافة تصنيف فرعى",
+  "city": "المدينة",
+  "add_new_sub": "اضافة تصنيف فرعى",
   "enter_category": "ادخل التصنيف",
   "enter_your_verification_code": "ادخل رمز التحقق الخاص بك",
-  "we_sent_an_code_to_verify_your_phone": "تم ارسال رمز التحقق الى رقم الجوال الخاص بك"
+  "we_sent_an_code_to_verify_your_phone": "تم ارسال رمز التحقق الى رقم الجوال الخاص بك",
+  "add_product": "اضافة منتج",  "add_ads":"اضافة اعلان"
+
 }
