--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -154,6 +154,8 @@
   "limit":"حدد المخزون",
   "watch":"مشاهدة",
   "package":"اختر الباقة",
-  "video_title":"ضع لينك الفيديو"
-
+  "video_title":"ضع لينك الفيديو",
+"ordercomplete": "اكمال الطلب",
+  "cancel": "الغاء",
+  "total": "total"
 }
