--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -155,6 +155,7 @@
   "watch":"مشاهدة",
   "package":"اختر الباقة",
   "video_title":"ضع لينك الفيديو",
+  "new_orders": "الطلبات الجديده",
 "ordercomplete": "اكمال الطلب",
   "cancel": "الغاء",
   "total": "total"
