--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -158,6 +158,7 @@
   "new_orders": "الطلبات الجديده",
 "ordercomplete": "اكمال الطلب",
   "cancel": "الغاء",
-  "total": "total"
+  "total": "total",
+  "createaccount": "انئاء حساب"
 }
 
