--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -111,7 +111,7 @@
   "Detailedaddress": "Detailed address",
   "Sold": "Sold",
   "editproduct": "editproduct",
-  "Createaccount": "Create an account",
+  "createaccount": "Create an account",
   "goal_statistics": "Goal statistics",
   "wallet": "Wallet",
   "total_count": "Total Orders",
