--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -137,7 +137,7 @@
   "used_products": "المنتجات المستعملة",
   "new_products": "المنتجات الجديدة",
   "new": "جديد",
-  "used":"مستعمل",
+  "used": "مستعمل",
   "pending": "ف الانتظار",
   "complete": "مكتملة",
   "choose_type": "اختر النوع",
@@ -148,16 +148,16 @@
   "enter_category": "ادخل التصنيف",
   "enter_your_verification_code": "ادخل رمز التحقق الخاص بك",
   "we_sent_an_code_to_verify_your_phone": "تم ارسال رمز التحقق الى رقم الجوال الخاص بك",
-  "add_product": "اضافة منتج",  "add_ads":"اضافة اعلان",
-  "please_enter_data":" من فضلك أدخل ",
-  "discount":"نسبة التخفيض",
-  "limit":"حدد المخزون",
-  "watch":"مشاهدة",
-  "package":"اختر الباقة",
-  "video_title":"ضع لينك الفيديو",
+  "add_product": "اضافة منتج",
+  "add_ads": "اضافة اعلان",
+  "please_enter_data": " من فضلك أدخل ",
+  "discount": "نسبة التخفيض",
+  "limit": "حدد المخزون",
+  "watch": "مشاهدة",
+  "package": "اختر الباقة",
+  "video_title": "ضع لينك الفيديو",
   "new_orders": "الطلبات الجديده",
-"ordercomplete": "اكمال الطلب",
+  "ordercomplete": "اكمال الطلب",
   "cancel": "الغاء",
-  "total": "total"
+  "no_orders": "لا يوجد طلبات"
 }
-
