--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -148,13 +148,6 @@
   "enter_category": "Enter category",
   "enter_your_verification_code": "Enter your verification code",
   "we_sent_an_code_to_verify_your_phone": "We sent an code to verify your phone ",
-  "add_product":"Add Product",
-  "add_ads":"Add Ads",
-  "please_enter_data":" Please enter ",
-  "discount":"discount percentage",
-  "limit":"Select stock",  "watch":"Views",  "package":"choose package",
-  "video_title":"Video  Link",  "new_orders": "New Orders",
-
   "add_product": "Add Product",
   "add_ads": "Add Ads",
   "please_enter_data": " Please enter ",
@@ -163,18 +156,10 @@
   "watch": "Views",
   "package": "choose package",
   "video_title": "Video  Link",
+  "new_orders": "New Orders",
   "no_orders": "No Orders",
   "edit_product": "Update Product",
   "delete_product": "Delete Product",
-  "add_product": "Add Product",
-  "add_ads": "Add Ads",
-  "please_enter_data": " Please enter ",
-  "discount": "discount percentage",
-  "limit": "Select stock",
-  "watch": "Views",
-  "package": "choose package",
-  "video_title": "Video  Link",
   "ordercomplete": "Order Complete",
-  "cancel": "Cancel",
-  "total": "total"
+  "cancel": "Cancel"
 }
