--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -161,7 +161,8 @@
   "cancel": "الغاء",
   "total": "total",
   "createaccount": "انئاء حساب",
-  "no_orders": "لا يوجد طلبات"
+  "no_orders": "لا يوجد طلبات",
+  "completeorder": "اكمال الطلب"
 
 
 
