--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -159,7 +159,7 @@
   "new_orders": "الطلبات الجديده",
   "ordercomplete": "اكمال الطلب",
   "cancel": "الغاء",
-  "total": "total",
+  "total": "الاجمالي",
   "createaccount": "انئاء حساب",
   "no_orders": "لا يوجد طلبات",
   "completeorder": "اكمال الطلب"
