--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -162,5 +162,6 @@
   "delete_product": "Delete Product",
   "ordercomplete": "Order Complete",
   "cancel": "Cancel",
-  "completeorder": "Compelete Oreder"
+  "completeorder": "Compelete Oreder",
+  "loading":"Loading ..."
 }
