--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -160,7 +160,7 @@
   "ordercomplete": "اكمال الطلب",
   "cancel": "الغاء",
   "total": "الاجمالي",
-  "createaccount": "انئاء حساب",
+  "createaccount": "انشاء حساب",
   "no_orders": "لا يوجد طلبات",
   "completeorder": "اكمال الطلب",
   "loading":"جاري الدخول ...."
