--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -163,10 +163,6 @@
   "createaccount": "انشاء حساب",
   "no_orders": "لا يوجد طلبات",
   "completeorder": "اكمال الطلب",
-  "editprofile": "تعديل الحساب"
+  "editprofile": "تعديل الحساب",
   "loading":"جاري الدخول ...."
-
-
-
-
 }
