--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -164,5 +164,7 @@
   "no_orders": "لا يوجد طلبات",
   "completeorder": "اكمال الطلب",
   "editprofile": "تعديل الحساب",
-  "loading":"جاري الدخول ...."
+  "loading":"جاري الدخول ....",
+  "delete_product": "حذف الحساب",
+  "edit_product": "تعديل المنتج"
 }
